--- a/gb/19/12/11/n11715706.md
+++ b/gb/19/12/11/n11715706.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jigfnv3721/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jigfnv3721/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jigfnv3721/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>外埔绿能发电恐延宕 中市重申收厨余免费</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/dad45701dfb532b56b99a88f5cc29251-600x400.jpg" />
 <h6>国民党议员质询批，外埔绿能园区ROT厂商，截至目前尚未申请到电业执照。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年12月11日讯】（大纪元记者黄玉燕台湾台中报导）台中外埔生态绿能园区原定107年9月试营运，每年可以烧5万吨稻草，每天可以处理150吨<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%8E%A8%E4%BD%99.md#1">厨余</a>，每年可以发电3377万度，并提供9670户住家使用。张瀞分等多位议员11日于议会质询再批，与前市府签约的ROT厂商，截至目前尚未申请到<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E7%94%B5%E4%B8%9A%E6%89%A7%E7%85%A7.md#1">电业执照</a>，要求环保局及政风处要谨慎处理。至于外传前朝承诺要帮厂商收厨余并随水加收处理费，市长卢秀燕说，这部分市府不会额外征收生厨余费用。</p>
-<p>议员张瀞分表示，大家都支持没有污染的绿能发电，但前市府签下不平等条约，要市府负责收运生<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%8E%A8%E4%BD%99.md#1">厨余</a>和<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E7%A8%BB%E7%A7%86.md#1">稻秆</a>，每年要付出2亿8000万的收运费用，这都是市民纳税钱；但至今还无法发电售电的<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%A4%96%E5%9F%94%E7%BB%BF%E8%83%BD%E5%9B%AD%E5%8C%BA.md#1">外埔绿能园区</a>恐变成大钱坑，呼吁市府一定要查清楚。</p>
-<p>议员张廖乃纶说，当初前市长林佳龙任内还花了将近1亿元买绿园宝厨余桶，要民众帮忙收生厨余，而厂商原本宣称明年1月可以售电，但是到现在连<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E7%94%B5%E4%B8%9A%E6%89%A7%E7%85%A7.md#1">电业执照</a>都没有。</p>
-<p>议员李荣鸿说，前市府称农民配合收运<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E7%A8%BB%E7%A7%86.md#1">稻秆</a>可以让农民受益，结果不但收运困难，连发电都没办法；而绿能园区没有发电，固定回馈金也要靠市府花公帑来编列预算来支付。</p>
+<p>【大纪元2019年12月11日讯】（大纪元记者黄玉燕台湾台中报导）台中外埔生态绿能园区原定107年9月试营运，每年可以烧5万吨稻草，每天可以处理150吨<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8E%A8%E4%BD%99.md#1">厨余</a>，每年可以发电3377万度，并提供9670户住家使用。张瀞分等多位议员11日于议会质询再批，与前市府签约的ROT厂商，截至目前尚未申请到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B5%E4%B8%9A%E6%89%A7%E7%85%A7.md#1">电业执照</a>，要求环保局及政风处要谨慎处理。至于外传前朝承诺要帮厂商收厨余并随水加收处理费，市长卢秀燕说，这部分市府不会额外征收生厨余费用。</p>
+<p>议员张瀞分表示，大家都支持没有污染的绿能发电，但前市府签下不平等条约，要市府负责收运生<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8E%A8%E4%BD%99.md#1">厨余</a>和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A8%BB%E7%A7%86.md#1">稻秆</a>，每年要付出2亿8000万的收运费用，这都是市民纳税钱；但至今还无法发电售电的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%96%E5%9F%94%E7%BB%BF%E8%83%BD%E5%9B%AD%E5%8C%BA.md#1">外埔绿能园区</a>恐变成大钱坑，呼吁市府一定要查清楚。</p>
+<p>议员张廖乃纶说，当初前市长林佳龙任内还花了将近1亿元买绿园宝厨余桶，要民众帮忙收生厨余，而厂商原本宣称明年1月可以售电，但是到现在连<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B5%E4%B8%9A%E6%89%A7%E7%85%A7.md#1">电业执照</a>都没有。</p>
+<p>议员李荣鸿说，前市府称农民配合收运<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A8%BB%E7%A7%86.md#1">稻秆</a>可以让农民受益，结果不但收运困难，连发电都没办法；而绿能园区没有发电，固定回馈金也要靠市府花公帑来编列预算来支付。</p>
 <p>议员陈政显说，绿园宝生厨余桶目前还有大约1万5000个没发出去，与厂商契约内容疑点重重，导致台中市库受损。</p>
-<p>环保局长吴志超说，明年1月市府就会检视营运计划书，如果还不能发电且回馈市府售电收益，市府就会求偿。吴志超说，<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%A4%96%E5%9F%94%E7%BB%BF%E8%83%BD%E5%9B%AD%E5%8C%BA.md#1">外埔绿能园区</a>有二大部分，不只生厨余发电还没有电业执照无法售电，稻秆气化也没试车成功、无法运转，预期明年1月运作效能也不会好；而环保局到目前为止，已经开出四张罚单，共90万。</p>
+<p>环保局长吴志超说，明年1月市府就会检视营运计划书，如果还不能发电且回馈市府售电收益，市府就会求偿。吴志超说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%96%E5%9F%94%E7%BB%BF%E8%83%BD%E5%9B%AD%E5%8C%BA.md#1">外埔绿能园区</a>有二大部分，不只生厨余发电还没有电业执照无法售电，稻秆气化也没试车成功、无法运转，预期明年1月运作效能也不会好；而环保局到目前为止，已经开出四张罚单，共90万。</p>
 <p>市长卢秀燕说，契约有提到三年会检讨，市府到时候会确实检讨，如果厂商不能发电，也不能解决生厨余、稻秆去化，市府会依法处理。至于外传前朝承诺要帮厂商收厨余并随水加收处理费，这部分市府不会额外征收生厨余费用。</p>
 <p>政风处代理处长许金来表示，绿园宝案已有议员按铃告发，台中地检署调卷侦办中，外埔绿能园区政风处也正调查了解中。</p>
 <p>责任编辑：昌英</p>
@@ -20,47 +20,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/17/11/11/n9829087.md#1">减缓空污 印度政府租机具助农民处理稻秆</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/17/12/11/n9946448.md#1">减碳健身多功能 台东智慧绿能园区启用</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/2/10/n11035365.md#1">无心插柳 稻草卷奇景吸引3万多人拍照打卡</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/8/28/n11482496.md#1">厨余减量再利用  田中镇所化腐朽变黄金</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/8/30/n11486961.md#1">省电又省钱！印度“稻草冷气机”卖到缺货</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/10/15/n11589970.md#1">“生厨余”量不足 外埔绿能发电恐卡卡</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/10/22/n11604144.md#1">厨余回收四要“减量、沥干、分类、回收”</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/26/n13400025.md#1">首座太阳光电球场启用 减碳量约千辆机车</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/26/n13399923.md#1">台中神冈幸福角落 卫生所彩绘墙揭牌</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/26/n13399535.md#1">地下道填平、污水道变身  中市工程夺金质奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/11/11/n9829087.md#1">减缓空污 印度政府租机具助农民处理稻秆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/11/n9946448.md#1">减碳健身多功能 台东智慧绿能园区启用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/2/10/n11035365.md#1">无心插柳 稻草卷奇景吸引3万多人拍照打卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/28/n11482496.md#1">厨余减量再利用  田中镇所化腐朽变黄金</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/30/n11486961.md#1">省电又省钱！印度“稻草冷气机”卖到缺货</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/15/n11589970.md#1">“生厨余”量不足 外埔绿能发电恐卡卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/22/n11604144.md#1">厨余回收四要“减量、沥干、分类、回收”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680620.md#1">台中YouBike2.0千站达标 最高周转率5在新光远百</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/16/n11191240.md#1" target="_blank">林辉：诬陷美国发动细菌战 毛周被打脸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/12/18/n2367165.md#1" target="_blank">组图：法轮功在海峡两岸的强烈对比</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9844557.md#1" target="_blank">毛泽东诗词“蔑视祖宗 自认风流”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787288.md#1" target="_blank">一名高干子弟给习近平公开信曝酷刑及逼供秘闻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/19/n13386938.md#1">【百年真相】80岁被逼扫街 梁启超夫人文革受辱</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/20/n13388351.md#1">【舞蹈三剑客】神韵演员如何保持良好体态</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/21/n13389103.md#1">“缘分”到底是怎么回事？</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/24/n13395948.md#1">【新闻看点】中共军队花莲演习登陆 党媒喊打仗</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/25/n13397949.md#1">【拍案惊奇】张高丽带头反习 历史决议改547处</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/25/n13397940.md#1">【十字路口】中共四大隐蔽战术祸乱台湾</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/24/n13396309.md#1">中国水域90%船只讯号消失 专家：个资法作祟</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13394282.md#1">刘嘉玲晒与家人合照 梁朝伟被指撞脸齐秦</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13393781.md#1">【财商天下】张高丽带头反习 或成丑闻引爆点</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13394282.md#1">刘嘉玲晒与家人合照 梁朝伟被指撞脸齐秦</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/24/n13396343.md#1">林志玲遭陆综欠薪4年 终追回400万人民币</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13394062.md#1">昆凌惊爆头部撞伤 紧急取消隔日行程</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13394146.md#1">李冰冰微博发长文 自曝身体出问题</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/25/n13396658.md#1">香港禁映 《少年》获颁金马影展2021奈派克奖</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13392522.md#1">为救失去意识女车主 荷兰男子开车去给她撞</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/24/n13395285.md#1">美国离奇车祸 SUV把SUV撞飞到SUV上</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13392810.md#1">纽西兰女子报警：我被负鼠“软禁”在家！</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13392978.md#1">冬天好发心肌梗塞、猝死 出现3种症状警惕</a></li>
-<li><a href="https://github.com/lkpsfe3093/djy/blob/master/gb/21/11/23/n13392900.md#1">家里冰箱也会“生病”？这些信号一定要注意</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/11/n11715706.htm">外埔绿能发电恐延宕 中市重申收厨余免费</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/11/n11715706.htm">外埔绿能发电恐延宕 中市重申收厨余免费</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jigfnv3721/djy/blob/master/gb/19/12/11/n11715706.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jigfnv3721/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jigfnv3721/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jigfnv3721/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/12/11/n11715706.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
